--- a/main.ipynb
+++ b/main.ipynb
@@ -11,13 +11,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gVzMzkmzs4Fd",
-        "outputId": "27f78c0f-09c2-4394-b731-7e4ac5b7987c"
+        "outputId": "436a648f-a141-490c-b1e8-247444e37b3f"
       },
       "outputs": [
         {
@@ -53,13 +53,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGYNHsjss4Fe",
-        "outputId": "8f29e2a2-7468-40a3-ff51-555b5df8bb32"
+        "outputId": "1656b0e1-76f0-475d-bb5c-06726d8aac60"
       },
       "outputs": [
         {
@@ -121,26 +121,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 323
+          "base_uri": "https://localhost:8080/"
         },
         "id": "to4p-0rCs4Fe",
-        "outputId": "cdf7a561-fa1f-41d8-ccc8-b462d7c47d05"
+        "outputId": "0391c473-5228-4859-e558-17ea697375a0"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "invalid subscript '<' in einstein sum subscripts string, subscripts must be letters",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-109796248.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Compute identity of vector a.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meinsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"<YOUR_ANSWER_HERE>\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/numpy/_core/einsumfunc.py\u001b[0m in \u001b[0;36meinsum\u001b[0;34m(out, optimize, *operands, **kwargs)\u001b[0m\n\u001b[1;32m   1427\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mspecified_out\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1428\u001b[0m             \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'out'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1429\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mc_einsum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0moperands\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1430\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1431\u001b[0m     \u001b[0;31m# Check the kwargs to avoid a more cryptic error later, without having to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid subscript '<' in einstein sum subscripts string, subscripts must be letters"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
           ]
         }
       ],
@@ -148,7 +142,7 @@
         "# Puzzle #1\n",
         "# Compute identity of vector a.\n",
         "a = np.arange(10)\n",
-        "out = np.einsum(\"<YOUR_ANSWER_HERE>\", a)\n",
+        "out = np.einsum(\"i -> i\", a)\n",
         "print(np.allclose(a, out))"
       ]
     },
@@ -158,7 +152,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 412
         },
         "id": "VTTHlZvJs4Fe",
         "outputId": "6743557a-d5ce-4a87-db98-1bf44eb3d7a7"
@@ -237,7 +231,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 412
         },
         "id": "MLbaYNK0s4Fe",
         "outputId": "71b0dd35-11f5-4922-c5a0-211107e12870"
@@ -271,7 +265,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 412
         },
         "id": "x-HqiZhns4Fe",
         "outputId": "2c83cd58-4c7e-4fac-ff34-ce420af8052a"
@@ -482,7 +476,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 216
+          "height": 251
         },
         "id": "lR856dI2s4Ff",
         "outputId": "576c614a-7bed-478c-8970-0ca6c65a42b5"
